--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -17,10 +17,19 @@
    <!-- Font Awesome Icon -->
    <link rel="stylesheet" href="/assets/css/font-awesome.min.css">
    <!-- Custom stlylesheet -->
+   <!-- index.html -->
+  
+   
+   <!-- index.html -->
+<!-- <script src="https://www.paypal.com/sdk/js?client-id=YOUR_CLIENT_ID"></script> -->
+
+
    <link type="text/css" rel="stylesheet" href="/assets/css/style.css"/>
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
-<body>
+<body class="mat-typography">
   <app-root></app-root>
 
 
